--- a/style.css
+++ b/style.css
@@ -1,5 +1,75 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html{
+  font-size: 62.5%;
+}
+
+body{
+  font-size: 2rem;
+  line-height: 3rem;
+  background: rgb(245, 245, 245);
+  font-family: 'EB Garamond', serif;
+  color: rgb(10, 10, 10);
+}
+
 .container{
-  display:flex;
-  flex-direction:column;
-  align-items:center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  padding: 3rem;
+}
+
+#koanDisplay{
+  max-width: 500px;
+}
+
+h1, h2, button{
+  font-family:'Oswald', sans-serif;
+  text-transform: uppercase;
+}
+
+h1, h2{
+  font-weight: 500;
+  line-height: 5rem;
+}
+
+h1{
+  font-size: 4rem;
+}
+
+h2{
+  font-size: 3rem;
+}
+
+a{
+  background: linear-gradient(120deg, rgba(140,9,128,1) 15%, rgba(46,92,242,1) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-box-decoration-break: clone;
+}
+
+button{
+  font-weight: 300;
+  padding: 10px;
+  font-size: 2rem;
+}
+
+.links{
+  text-align: center;
+}
+
+.links > ul > li{
+  list-style: none;
+  display:inline-flex;
+  font-size: 1.5rem;
+  padding: 0.7rem;
 }
