--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ button {
                 transform 150ms ease;
     -webkit-appearance: none;
     -moz-appearance: none;
-    margin: 1rem;
+    margin: 2rem;
 }
 
 button:hover,
@@ -117,6 +117,7 @@ button:active {
 footer{
   border-top: 1px dotted rgb(46,92,242);
   font-size: 1.5rem;
+  margin-top: 3rem;
 }
 
 .show {
